2.12.0-dev
-------------------
* 70929866 - Landing page for each aread of law
* Moved to poltergeist for jenkins build support
* 71943052 - Court page "Location of the building" section moved up to below "Phone" section

2.10.2
-------------------
* court council link area of law is being used to link for area of law incorrectly

2.10.1
-------------------
* 71851546 - Exception when resolver cannot get name
* Removed split testing

2.10.0
-------------------
* Updated search form to have correct query string when posting
* Added spec to cover search form requirements
* 70592184 - Survey monkey survey
* 68572994 - Printing court info page cuts off map across pages on IE8
* 68594216 - Treat family court as county court when choosing what leaflets to display
* 69098760 - Better search by area of law

2.9.3
-------------------
* Reverted to mappit as own server does not have all data

2.9.2
-------------------
* Added All back to area of law
* Switched search form to use a GET

2.9.1
-------------------
* Fixed area of law

2.9.0
-------------------
* 70929758 - Group areas of law
* 68594216 - Treat family court as county court when choosing what leaflets to display
* 70953704 - Change feedback form to direct to court complaint instructions

2.8.0
--------------------
* JSON-LD API: use better media type application/ld+json
* Rake task admin:create throws an error now (usually when the password is invalid)
* 67545050 - Phone number validation - don't allow entering more than 13 digits, not including the spaces
* 69258314 - Invite user fails

2.7.2
---------------------
* Fixed code position

2.7.1
---------------------
* Added first page for A/B testing

2.7.0
---------------------
*

2.6.1
---------------------
* 67752650 - BUG: while searching for search?q=Dn31+1pd&area_of_law=Employment error 500
* 66813762 - Require change of lat/lon when admin changes visiting address post code
* 67842856 - Display for multiple addresses is messed up