@@ -63,10 +63,12 @@
   text-decoration: underline;
   background: #ddd;
 }
+
 .search-results {
   padding: 0;
   list-style-image: none;
 }
+
 .search-results li {
   width: 100%;
   padding: 10px;
@@ -91,6 +93,17 @@
   margin: 0.1em 0.5em;
   list-style-image: none;
   white-space: nowrap;
+}
+
+.search-results a.court-title {
+  font-weight: bold;
+  font-size: 19px;
+}
+
+.details-link {
+  display: block;
+  margin-top: 0.4em;
+  width:6em;
 }
 
 select{
