@@ -22,13 +22,14 @@
         </ul>
         <% qs = {} %>
         <% qs[:from] = @search.q if @search.postcode_search? %>
-        <%= link_to(court.name, court_path(court, qs)) %>
+        <%= link_to(court.name, court_path(court, qs), class: "court-title") %>
         <% if @search.postcode_search? && court.respond_to?(:distance) %>
           <br /><small><%= court.distance.to_f.round(2) %> miles from <%= @search.q %></small>
         <% end %>
         <% if court.addresses.count > 0 %>
           <%= format_address court.addresses.first %>
         <% end %>
+        <%= link_to('View details', court_path(court, qs), class: "details-link") %>
       </li>
     <% end %>
   </ul>
