@@ -3,6 +3,7 @@
 * 70929866 - Landing page for each aread of law
 * Moved to poltergeist for jenkins build support
 * 71943052 - Court page "Location of the building" section moved up to below "Phone" section
+* 72329292 - 'View Details' link added to court search results
 
 2.10.2
 -------------------
